--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="assets/scroll.js"></script>
+    <link href="assets/normalize.css" rel="stylesheet"/>
     <link href="assets/styles.css" rel="stylesheet"/>
 </head>
 <body>
