calling it a day

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
         <main>
-            <div class="main-sections" id="lessons">
+            <section class="main-sections first">
                 <h2>Step 1: Pick a lesson</h2>
                 <div class="content-circle">
                     <div class=".clip-circle">
@@ -46,8 +46,8 @@
                     </div>
                     <h3>Electricity</h3>
                 </div>
-            </div>
-            <div class="main-sections" id="tutorials">
+            </section>
+            <section class="main-sections second">
                 <h2>Step 2: Try the tutorial</h2>
                 <div class="content-circle">
                     <div class=".clip-circle">
@@ -67,8 +67,8 @@
                     </div>
                     <h3>Electricity</h3>
                 </div>
-            </div>
-            <div class="main-sections" id="quizzes">
+            </section>
+            <div class="main-sections third">
                 <h2>Step 3: Take the quiz</h2>
                 <div class="content-circle">
                     <div class=".clip-circle">
@@ -88,9 +88,10 @@
                     </div>
                     <h3>Electricity</h3>
                 </div>
-            </div>
+            </section>
         </main>
         <footer>
+            <p>C2014 CIRCUIT CELL</p>
         </footer>
 </body>
 </html>
