--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Circuit Cell is an interactive educational website whose sole purpose it to teach elementary school students about circuits, magnetism, and elecricity.">
+    <meta name="author" content="Cristian Ramirez & Andrea Galvan">
+    <link rel="author" href="humans.txt"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="assets/scripts/scroll.js"></script>
     <link href="assets/styles/normalize.css" rel="stylesheet"/>
