--- a/quiz-magnets.html
+++ b/quiz-magnets.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Cristian Ramirez & Andrea Galvan">
     <link rel="author" href="humans.txt"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="assets/js/quiz.js"></script>    
     <link href="assets/css/normalize.css" rel="stylesheet"/>
     <link href="assets/css/styles.css" rel="stylesheet"/>
     <link href="assets/css/mediaqueries.css" rel="stylesheet"/>
@@ -28,19 +29,28 @@
         </nav>
         <main>
             <section class="main-sections first">
-                <h2>THE PURPOSE OF CIRCUIT CELL</h2>
-                <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                <h2>Magnets Quiz</h2>
+                <p class="text-center">Are you ready for the quiz? If not, go back to the lessons page.</p>
             </section>
             <section class="main-sections second">
-                <h2>THE PEOPLE BEHIND IT</h2>
-                <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                <h2>Question #1</h2>
+                <h3>How are magnetic fields created?</h3>
+                <section>
+                <input type="radio" name="magnet_q1" value="0"/>
+                <label>electrons flow in different directions.</label>
+                <input type="radio" name="magnet_q1" value="1"/>
+                <label>electrons flow from the north pole to the south pole.</label>
+                <input type="radio" name="magnet_q1" value="2"/>
+                <label>electrons flow like an ocean.</label>
+                <input type="radio" name="magnet_q1" value="3"/>
+                <label>magnet electrons have different qualities than normal materials.</label>
+                <input type="button" id="magnet_q1" onclick="questionCheck('magnet_q1', correct_magnets, 1)">test</input>
+                </section>
             </section>
-            <div class="main-sections third">
-                <h2>Thanks for supporting us!</h2>
-            </section>
-        </main>
-        <footer>
+            
+            <footer>
             <p>C2014 CIRCUIT CELL</p>
         </footer>
 </body>
 </html>
+        
