i'd give my life 2

--- a/quiz-magnets.html
+++ b/quiz-magnets.html
@@ -44,7 +44,7 @@
                 <label>electrons flow like an ocean.</label>
                 <input type="radio" name="magnet_q1" value="3"/>
                 <label>magnet electrons have different qualities than normal materials.</label>
-                <input type="button" id="magnet_q1" onclick="questionCheck('magnet_q1', correct_magnets, 1)">test</input>
+                <input type="button" id="magnet_q1" onclick="questionCheck("magnet_q1", correct_magnets, 1)">test</input>
                 </section>
             </section>
             
