--- a/quiz-electricity.html
+++ b/quiz-electricity.html
@@ -22,9 +22,9 @@
     </header>
         <nav class="top-nav">
             <ul>            
-                <li><a href="#lessons">LESSONS</a></li>
-                <li><a href="#tutorials">TUTORIALS</a></li>
-                <li><a href="#quizzes">QUIZZES</a></li>
+                <li><a href="lessons.html">LESSONS</a></li>
+                <li><a href="tutorials.html">TUTORIALS</a></li>
+                <li><a href="quizzes.html">QUIZZES</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
