--- a/quiz-magnets.html
+++ b/quiz-magnets.html
@@ -10,17 +10,16 @@
     <meta name="author" content="Cristian Ramirez & Andrea Galvan">
     <link rel="author" href="humans.txt"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="assets/scripts/bigslide.js"></script>
-    <script src="assets/js/quiz.js"></script>    
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="assets/js/bigslide.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/quiz.js"></script>
     <link href="assets/css/normalize.css" rel="stylesheet"/>
     <link href="assets/css/styles.css" rel="stylesheet"/>
     <link href="assets/css/mediaqueries.css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <img id="logo" src="assets/img/logo.png">
-    </header>
-        <nav class="top-nav">
+        <nav id="menu" class="panel" role="navigation">
             <ul>            
                 <li><a href="lessons.html">LESSONS</a></li>
                 <li><a href="tutorials.html">TUTORIALS</a></li>
@@ -28,7 +27,23 @@
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
-        <main>
+    <div class="wrap push">   
+    <header>
+         <a href="index.html"><div id="logo"></div></a>
+    </header>
+    <div class="push" id="mobile-nav">
+        <a href="#menu" class="menu-link">☰</a>
+        
+    </div>
+    <nav class="top-nav">
+        <ul>            
+            <li><a href="#lessons">LESSONS</a></li>
+            <li><a href="#tutorials">TUTORIALS</a></li>
+            <li><a href="#quizzes">QUIZZES</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+        </ul>
+    </nav>
+    <main>
             <section class="main-sections first">
                 <h2>Magnets Quiz</h2>
                 <p class="text-center">Are you ready for the quiz? If not, go back to the lessons page.</p>
