--- a/index.html
+++ b/index.html
@@ -9,29 +9,25 @@
     <meta name="description" content="Circuit Cell is an interactive educational website whose sole purpose it to teach elementary school students about circuits, magnetism, and elecricity.">
     <meta name="author" content="Cristian Ramirez & Andrea Galvan">
     <link rel="author" href="humans.txt"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="assets/js/bigslide.js"></script>
-    <script src="assets/js/plugins.js"></script>
     <link href="assets/css/normalize.css" rel="stylesheet"/>
     <link href="assets/css/styles.css" rel="stylesheet"/>
     <link href="assets/css/mediaqueries.css" rel="stylesheet"/>
 </head>
 <body>
-        <nav id="menu" class="panel" role="navigation">
+    <nav id="menu" class="panel" role="navigation">
             <ul>            
                 <li><a href="lessons.html">LESSONS</a></li>
                 <li><a href="tutorials.html">TUTORIALS</a></li>
                 <li><a href="quizzes.html">QUIZZES</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
-        </nav>
+    </nav>
     <div class="wrap push">   
     <header>
          <a href="index.html"><div id="logo"></div></a>
     </header>
     <div class="push" id="mobile-nav">
-        <a href="#menu" class="menu-link">☰</a>
+        <a href="#menu" class="menu-link"><img src='assets/img/nav.svg' alt="mobile nav"></a>
         
     </div>
     <nav class="top-nav">
@@ -43,22 +39,23 @@
         </ul>
     </nav>
     <main>
-        <section class="main-sections first">
+       <section class="main-sections first">
             <h2>Step 1: Pick a lesson</h2>
             <div class="content-circle">
                 <div class=".clip-circle">
-
+                    <img src="assets/img/sdcard.png" width="25%" height="25%"/>
                 </div>
                 <h3>Circuits</h3>
             </div>
             <div class="content-circle">
                 <div class=".clip-circle">
-
+                    <img src="assets/img/discmagnet.png" width="25%" height="25%"/>
                 </div>
                 <h3>Magnets</h3>
             </div>
             <div class="content-circle">
                 <div class=".clip-circle">
+                    <img src="assets/img/lightning.png" width="25%" height="25%"/>                    
                 </div>
                 <h3>Electricity</h3>
             </div>
@@ -67,40 +64,40 @@
             <h2>Step 2: Try the tutorial</h2>
             <div class="content-circle">
                 <div class=".clip-circle">
-
+                    <img src="assets/img/integratedcircuit.png" width="25%" height="25%"/>
                 </div>
                 <h3>Circuits</h3>
             </div>
             <div class="content-circle">
                 <div class=".clip-circle">
-
+                    <img src="assets/img/horseshoemagnet.png" width="25%" height="25%"/>
                 </div>
                 <h3>Magnets</h3>
             </div>
             <div class="content-circle">
                 <div class=".clip-circle">
-
+                    <img src="assets/img/lightbulb.png" width="25%" height="25%"/>
                 </div>
                 <h3>Electricity</h3>
             </div>
         </section>
-            <div class="main-sections third">
+            <section class="main-sections third">
                 <h2>Step 3: Take the quiz</h2>
                 <div class="content-circle">
                     <div class=".clip-circle">
-
+                        <img src="assets/img/circuitboard.png" width="25%" height="25%"/>
                     </div>
                     <h3>Circuits</h3>
                 </div>
                 <div class="content-circle">
                     <div class=".clip-circle">
-
+                        <img src="assets/img/compass.png" width="15%" height="25%"/>
                     </div>
                     <h3>Magnets</h3>
                 </div>
                 <div class="content-circle">
                     <div class=".clip-circle">
-
+                        <img src="assets/img/staticcirclething.png" width="25%" height="25%"/>
                     </div>
                     <h3>Electricity</h3>
                 </div>
@@ -110,7 +107,9 @@
             <p>C2014 CIRCUIT CELL</p>
         </footer>
         
-            </div>
         </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="assets/js/bigslide.js"></script>
+    <script src="assets/js/plugins.js"></script>
 </body>
 </html>
